# pipedrive-cli

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.local.json
docs/: cli-options.md  expressions.md  pipedrive-api-export.md
src/pipedrive_cli/: __init__.py  api.py  backup.py  base.py  cli.py  config.py  converter.py  diff.py  duplicates.py  exceptions.py  expressions.py  field.py  importer.py  matching.py  restore.py  search.py  transform.py
tests/: __init__.py  conftest.py  test_api.py  test_backup.py  test_base_local.py  test_cli.py  test_cli_field.py  test_converter.py  test_diff.py  test_duplicates.py  test_field.py  test_field_options.py  test_importer.py  test_matching.py  test_restore.py  test_search.py  test_store_cli.py  test_transform.py
tests/fixtures/: __init__.py  datapackage_factory.py
tests/integrity/: __init__.py  conftest.py  helpers.py  test_field_commands.py  test_helpers.py  test_schema_commands.py  test_value_commands.py
