[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pipedrive-cli"
version = "0.1.0"
description = "CLI tool for backing up Pipedrive CRM data via API"
readme = "README.md"
requires-python = ">=3.11"
license = "GPL-3.0-only"
authors = [
    { name = "lmzr" }
]

[project.urls]
Homepage = "https://github.com/lmzr/pipedrive-cli"
Repository = "https://github.com/lmzr/pipedrive-cli"
dependencies = [
    "click>=8.1",
    "httpx>=0.27",
    "frictionless>=5.0",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "ruff>=0.4",
]

[project.scripts]
pipedrive-cli = "pipedrive_cli.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/pipedrive_cli"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
